hologram/crates/atlas-core/tests/snapshots/serialize_stability__backward_compat_old_format.snap
---
source: crates/atlas-core/tests/serialize_stability.rs
expression: hex_repr
---
- "0000: 30 00 00 00 00 03 01 04 02 05 06 09 07 0a 08 0b"
- "0010: 0c 0f 0d 10 0e 11 12 15 13 16 14 17 18 1b 19 1c"
- "0020: 1a 1d 1e 21 1f 22 20 23 24 27 25 28 26 29 2a 2d"
- "0030: 2b 2e 2c 2f 30 33 31 34 32 35 36 39 37 3a 38 3b"
- "0040: 3c 3f 3d 40 3e 41 42 45 43 46 44 47 48 4b 49 4c"
- "0050: 4a 4d 4e 51 4f 52 50 53 54 57 55 58 56 59 5a 5d"
- "0060: 5b 5e 5c 5f 02 00 00 00 01 04 01 00 00 00 ff ff"
- "0070: ff ff ff ff ff ff ff ff ff ff 01 00 00 00 64 00"
- "0080: 00 00 32 00 00 00 00 00 00 00"
