hologram/crates/atlas-core/tests/snapshots/serialize_stability__binary_format_with_validation.snap
---
source: crates/atlas-core/tests/serialize_stability.rs
expression: hex_repr
---
- "0000: 30 00 00 00 00 03 01 04 02 05 06 09 07 0a 08 0b"
- "0010: 0c 0f 0d 10 0e 11 12 15 13 16 14 17 18 1b 19 1c"
- "0020: 1a 1d 1e 21 1f 22 20 23 24 27 25 28 26 29 2a 2d"
- "0030: 2b 2e 2c 2f 30 33 31 34 32 35 36 39 37 3a 38 3b"
- "0040: 3c 3f 3d 40 3e 41 42 45 43 46 44 47 48 4b 49 4c"
- "0050: 4a 4d 4e 51 4f 52 50 53 54 57 55 58 56 59 5a 5d"
- "0060: 5b 5e 5c 5f 02 00 00 00 01 04 00 00 00 00 00 00"
- "0070: 00 00 01 00 00 00 12 00 00 00 00 00 00 00 00 00"
- "0080: 00 00 03 04 05 00 01 02 09 0a 0b 06 07 08 0f 10"
- "0090: 11 0c 0d 0e 15 16 17 12 13 14 1b 1c 1d 18 19 1a"
- "00a0: 21 22 23 1e 1f 20 27 28 29 24 25 26 2d 2e 2f 2a"
- "00b0: 2b 2c 33 34 35 30 31 32 39 3a 3b 36 37 38 3f 40"
- "00c0: 41 3c 3d 3e 45 46 47 42 43 44 4b 4c 4d 48 49 4a"
- "00d0: 51 52 53 4e 4f 50 57 58 59 54 55 56 5d 5e 5f 5a"
- "00e0: 5b 5c"
