hologram/crates/atlas-core/tests/snapshots/serialize_stability__binary_size_with_validation.snap
---
source: crates/atlas-core/tests/serialize_stability.rs
expression: binary.len().to_string()
---
226
