hologram/crates/atlas-core/tests/snapshots/serialize_stability__json_format_with_validation.snap
---
source: crates/atlas-core/tests/serialize_stability.rs
expression: json
---
{
  "mirror_pairs": [
    {
      "class_a": 0,
      "class_b": 3
    },
    {
      "class_a": 1,
      "class_b": 4
    },
    {
      "class_a": 2,
      "class_b": 5
    },
    {
      "class_a": 6,
      "class_b": 9
    },
    {
      "class_a": 7,
      "class_b": 10
    },
    {
      "class_a": 8,
      "class_b": 11
    },
    {
      "class_a": 12,
      "class_b": 15
    },
    {
      "class_a": 13,
      "class_b": 16
    },
    {
      "class_a": 14,
      "class_b": 17
    },
    {
      "class_a": 18,
      "class_b": 21
    },
    {
      "class_a": 19,
      "class_b": 22
    },
    {
      "class_a": 20,
      "class_b": 23
    },
    {
      "class_a": 24,
      "class_b": 27
    },
    {
      "class_a": 25,
      "class_b": 28
    },
    {
      "class_a": 26,
      "class_b": 29
    },
    {
      "class_a": 30,
      "class_b": 33
    },
    {
      "class_a": 31,
      "class_b": 34
    },
    {
      "class_a": 32,
      "class_b": 35
    },
    {
      "class_a": 36,
      "class_b": 39
    },
    {
      "class_a": 37,
      "class_b": 40
    },
    {
      "class_a": 38,
      "class_b": 41
    },
    {
      "class_a": 42,
      "class_b": 45
    },
    {
      "class_a": 43,
      "class_b": 46
    },
    {
      "class_a": 44,
      "class_b": 47
    },
    {
      "class_a": 48,
      "class_b": 51
    },
    {
      "class_a": 49,
      "class_b": 52
    },
    {
      "class_a": 50,
      "class_b": 53
    },
    {
      "class_a": 54,
      "class_b": 57
    },
    {
      "class_a": 55,
      "class_b": 58
    },
    {
      "class_a": 56,
      "class_b": 59
    },
    {
      "class_a": 60,
      "class_b": 63
    },
    {
      "class_a": 61,
      "class_b": 64
    },
    {
      "class_a": 62,
      "class_b": 65
    },
    {
      "class_a": 66,
      "class_b": 69
    },
    {
      "class_a": 67,
      "class_b": 70
    },
    {
      "class_a": 68,
      "class_b": 71
    },
    {
      "class_a": 72,
      "class_b": 75
    },
    {
      "class_a": 73,
      "class_b": 76
    },
    {
      "class_a": 74,
      "class_b": 77
    },
    {
      "class_a": 78,
      "class_b": 81
    },
    {
      "class_a": 79,
      "class_b": 82
    },
    {
      "class_a": 80,
      "class_b": 83
    },
    {
      "class_a": 84,
      "class_b": 87
    },
    {
      "class_a": 85,
      "class_b": 88
    },
    {
      "class_a": 86,
      "class_b": 89
    },
    {
      "class_a": 90,
      "class_b": 93
    },
    {
      "class_a": 91,
      "class_b": 94
    },
    {
      "class_a": 92,
      "class_b": 95
    }
  ],
  "unity_classes": [
    1,
    4
  ],
  "class_masks": [],
  "phase_windows": [],
  "validation_data": {
    "unity_flags": [
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0
    ],
    "mirror_table": [
      3,
      4,
      5,
      0,
      1,
      2,
      9,
      10,
      11,
      6,
      7,
      8,
      15,
      16,
      17,
      12,
      13,
      14,
      21,
      22,
      23,
      18,
      19,
      20,
      27,
      28,
      29,
      24,
      25,
      26,
      33,
      34,
      35,
      30,
      31,
      32,
      39,
      40,
      41,
      36,
      37,
      38,
      45,
      46,
      47,
      42,
      43,
      44,
      51,
      52,
      53,
      48,
      49,
      50,
      57,
      58,
      59,
      54,
      55,
      56,
      63,
      64,
      65,
      60,
      61,
      62,
      69,
      70,
      71,
      66,
      67,
      68,
      75,
      76,
      77,
      72,
      73,
      74,
      81,
      82,
      83,
      78,
      79,
      80,
      87,
      88,
      89,
      84,
      85,
      86,
      93,
      94,
      95,
      90,
      91,
      92
    ]
  }
}
